# Downsized-mnist

./: main.py  pyproject.toml
.claude/plan/: plan.md
ablations/: baseline_classification.ipynb  tsne_comparison.ipynb
common/: __init__.py  models.py  train.py
mnist1d/: __init__.py  data.py  transform.py  utils.py
