[project]
name = "downsized-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
]
