[project]
name = "downsized-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
]
